# MiscLang

./: .gitattributes  .gitignore  README.md  ri20min.rb
asm/bootII/: boot1.asm  boot2.asm  boot3.asm  makefile
asm/bootloader/: boot.asm  makefile
asm/mikeos/: makefile  myfirst.asm
awk/: hello.awk
bash/: animal.sh  func.sh  pick.sh
c/: xc.c
c/disk-filler/: love.c
c/interpreter/: hello.c  makefile  xc.c
c/lc3/: headers.h  hello.asm  lc3.c
c/magic/: trace2025.c
c/mem/: main.c  memalloc.c  memalloc.h
c/memory/: file_map.c  test.txt
c/quine/: quine.c
c/spawn/: spawn.c
c/threads/: flock.c  mutex.c  threads.c
c/worm/: worm  worm.c
cpp/: hello.cpp  poj2388.cpp
cpp/chapter1/: luoguP2947.cpp
cpp/chapter2/: hdu4911.cpp  luoguP1824.cpp  luoguP2880.cpp  permutation.cpp
cpp/chapter3/: hdu1010.cpp  lanqiao1122.cpp  lanqiao178-bfs.cpp  lanqiao602.cpp  luoguP4667.cpp
cpp/chapter4/: hdu1213.cpp  hdu1556.cpp  hdu1754.cpp  hdu3038.cpp  luoguP1908.cpp  luoguP3372.cpp  poj1182.cpp
cpp/leetcode/: lc1.cpp  (+168 more)
rust/: clean.sh
scala/: ClosureExample2.scala  ClosureExample3.scala  ClosureExample4.scala  DataTypeExamples.scala  HelloWorld.scala  LoopTest.scala  LoopTest2.scala  MatchExample.scala  ObjectExample.scala  PointTest.scala  PrintString.scala  TraitExample.scala  VariableExample.scala
text/: 6502.asm  CMakeLists.txt
typst/: main.typ
verilog/: ALU.v  bit-slice.v  blackbox.v  bus.v  counter.v  cross-domain.v  filter.v  fixto.v  full-adder.v  function-example.v  memory.v  ms.v  pll.v  rgb-flow.v  rgb.v  round-up.v  set-clear.v  stream-fifo.v
(+102 files in other folders)
